Changed Description and Author

--- a/blog-single.html
+++ b/blog-single.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<title>Heera HTML5 Template by Jewel Theme</title>
 
-	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
+	<meta name="description" content="UIUC Divest Official Website" >
 
-	<meta name="author" content="Jewel Theme">
+
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
