--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
   <!-- Favicon -->
     <link rel="shortcut icon" href="images/services/logo.png" type="image/x-icon">
 
-	<meta name="description" content="Heera HTML5 Template by Jewel Theme" >
+	<meta name="description" content="UIUC Divest Official Website" >
 
-	<meta name="author" content="Jewel Theme">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 
