Updated About Us to more accurate explanation.

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
 </div>-->
 
  <p class="item-description">
- UIUC Divest is a student-led campaign calling on our administration to financially divest from corporations that directly profit from human rights violations in the Palestinian area. While we are a Palestinian advocacy group, we stand with all marginalized and oppressed people. We also call on the University of Illinois to divest from private prison systems and companies using child labor. Divestment is the removing of investment from corporations that profit from human rights abuses and violations of international law.
+ UIUC Divest calls upon our administration to financially divest, or remove investments, from corporations that directly profit from human rights violations. We stand with all people marginalized on the basis of race, religion, ethnicity, gender, sexuality, class, or ability, from Palestine to the US and everywhere in between. For more information about what we stand for, please see the "Our Struggles" tab.
  </p>
 
 
@@ -484,6 +484,9 @@
     Shall the Students of the University of Illinois at Urbana-Champaign recommend to the Board of Trustees that the University divest, or withdraw investments, from companies which actively normalize, engage in, or fund recognized human rights violations of marginalized groups worldwide?
   </p>
   <p class="title-description ref-desc"><a href="http://uiucdivest.com/ourstruggles.html">For more information on marginalized groups and what we stand for, click here!</a></p>
+  <p>
+    Explanation: This referendum calls upon the Board of Trustees to pull its investments from companies that normalize, engage in, or fund recognized violations of human rights, including those of the Palestinian people and all peoples marginalized on the basis of race, ethnicity, religion, sexuality, gender, class, and ability. One such company is G4S plc, which operates private prisons, immigrant detention centers, and military checkpoints where documented violations of human rights have occurred. The authors of this referendum call for greater accountability in how the University invests its funds, particularly those managed under the active endowment pool. This referendum builds on a resolution passed by the Academic Senate in April 2016, which called upon the Board of Trustees to switch to a passively managed socially responsible investment fund. This referendum calls on the Board of Trustees to divest from companies that do not support the values which our University claims to uphold, including justice, equality, and respect for basic human rights.
+  </p>
 
   </div><!-- /.about-area -->
   </div><!-- /.container -->
