Jewish Voice for Peace Addition

--- a/letters.html
+++ b/letters.html
@@ -152,9 +152,12 @@
                 <div class="faq-writing">
 		   <ul>
 			<li>
-			<h4>WE ARE ACCEPTING LETTERS OF SUPPORT AT THIS TIME</h4><br />
+			<h4>Jewish Voice for Peace: Urbana-Champaign</h4><br />
 			<p>
-				If you have a letter of support at this time, please email us at uiucdivest@gmail.com
+				Jewish Voice for Peace stands with students at the University of Illinois- Urbana Champaign, as they call upon their university to divest from corporations complicit in Israel’s occupation, dispossession and oppression of the Palestinian people. <br /> <br /> 
+				As a national organization inspired by Jewish tradition to fight for a just peace in Israel/Palestine and for an end to all forms of racism, we stand in full support of the Palestinian call for the international community to apply Boycott, Divestment and Sanctions (BDS) pressure towards Israel until it abides by internationally recognized human rights principles. We reject the notion that BDS is anti-Semitic, or discriminatory in any way against the Jewish people or, as some have implied, the Israeli nationality. The BDS movement targets the policies of the Israeli government, not the Jewish people or the Israeli people. It demands that the Israeli government end its nearly 50-year occupation, grant full equality to the Palestinian citizens of Israel, and allow the world’s largest refugee population to return home. <br /> <br />
+				Far from being ‘anti-Jewish’, these demands of the BDS movement reflect values of justice, equality and dignity held dear by Jewish tradition, along with other faith traditions. In fact, the notion that all Jews necessarily support Israel and stand against BDS is itself a form of anti-Semitism, as it falsely assumes that all Jews will automatically behave a certain way, simply by virtue of being Jewish. Jewish people, like all other people, hold a variety of political opinions around the issues of our time, including the Israel-Palestine conflict. <br /> <br />
+				We commend the students of UIUC Divest for their efforts to hold their student government, and their university, accountable to the values of human rights, dignity and justice that, now more than ever, our institutions must work to enshrine and protect. We stand with them and call upon UIUC to divest all funds from corporations complicit in human rights abuses in Israel/Palestine.
 			</p>
 			<!--	<h4>LETTER OF SUPPORT: ANN ARBOR YOUNG DEMOCRATIC SOCIALISTS (Nov. 5th, 2016)</h4> <br /> -->
 			<!--	<p>
